# michar

./: .gitignore  Export.xls  README.md  example.ipynb  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
docs/: app.rst  conf.py  index.html  index.rst
docs/michar/: .buildinfo  app.html  genindex.html  index.html  michar.api.config.rst  michar.api.crawlers.rst  michar.api.rst  michar.api.sources.rst  michar.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/michar/_sources/: app.rst.txt  index.rst.txt
docs/michar/_sources/michar/: modules.rst.txt
docs/michar/michar/: michar.api.config.html  michar.api.crawlers.html  michar.api.html  michar.api.sources.html  michar.html  modules.html
docs/michar/notebooks/: lbc_calendar.html  lbc_calendar.ipynb
docs/notebooks/: lbc_calendar.ipynb
src/michar/: __init__.py  config.toml
src/michar/api/: profile.py  util.py
src/michar/api/choni/: scrapy.cfg
src/michar/api/choni/lbc/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
src/michar/api/choni/lbc/spiders/: lbc.py
src/michar/api/config/: config.toml
src/michar/api/crawlers/: Krawlerz.py
src/michar/api/fbi/: client.py
src/michar/api/sources/: legistar.py
src/michar/cli/app/: michar.py
src/michar/cli/app/cmd/: __init__.py  crawler.py  fbi.py  reporter.py
src/michar/cli/app/cmd/sources/: lbc.py  torrance.py
tests/michar/: test_import.py  test_lbc_calendar.py
tests/michar/api/: test_util.py
tests/micharoni/: test_noop.py
