[tool.poetry]
name = "michar"
version = "0.2.1"
description = "micha and charlie are the best"
authors = ["Boris"]
readme = "README.md"
packages = [{ include = "michar", from = "src" }]


[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.0"
rich-click = "^1.7.2"
rich-traceback = "^1.0.3"
tox = "^4.11.3"
requests = "^2.31.0"
build = "^1.0.3"
pytest = "^7.4.3"
black = "^23.10.1"
mypy = "^1.6.1"
isort = "^5.13.0"
jupyter = "^1.0.0"
pandas = "^2.1.4"
ijson = "^3.2.3"
toml = "^0.10.2"
markdown = "^3.5.1"
sphinx-rtd-theme = "^1.3.0"
sphinx-click = "^5.1.0"
trogon = "^0.5.0"

[tool.poetry.scripts]
michar = "michar.cli.app.michar:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
